# wagtail-meilisearch

./: .gitignore  README.md  mise.toml  pyproject.toml
src/wagtail_meilisearch/: __init__.py  backend.py  defaults.py  index.py  query.py  rebuilder.py  results.py  settings.py  utils.py
src/wagtail_meilisearch/management/commands/: meilisearch_indexes.py  meilisearch_status.py
tests/: test_wagtail_meilisearch.py
wagtail_meilisearch/: OLD_backend.py  backend.py  defaults.py  index.py  query.py  rebuilder.py  results.py  settings.py  utils.py
wagtail_meilisearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_meilisearch/management/commands/: meilisearch_index_settings.py  meilisearch_indexes.py  meilisearch_status.py
