[project]
name = "wagtail-meilisearch"
version = "1.0.0"
description = "A MeiliSearch backend for Wagatil"
readme = "README.md"
authors = [
    { name = "Hactar", email = "systems@hactar.is" }
]
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.2.3",
    "wagtail>=6.0",
    "meilisearch>=0.36.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
